# krate

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  STATUS.md  deny.toml  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  pages.yml  release.yml  self-hosted-ci.yml  self-hosted-fuzz-nightly.yml
Plan/: Build-Plan.md  Phase-0-Plan.md  Phase-1-Plan.md  Phase-2-Plan.md  Phase-3-Plan.md  Phase-4-Plan.md  Phase-5-Plan.md  Phase-6-Plan.md  Phase-7-Plan.md  Plan-Amendments-2026-07.md
apps/krate-cat/: Cargo.toml  manifest.toml
apps/krate-cat/fixtures/: hello.txt
apps/krate-cat/src/: lib.rs
apps/krate-clock/: Cargo.toml  manifest.toml
apps/krate-clock/src/: bindings.rs  lib.rs
apps/krate-curl/: Cargo.toml  manifest.toml
apps/krate-curl/src/: lib.rs
apps/krate-hello-gui/: Cargo.toml  manifest.toml
apps/krate-hello-gui/src/: bindings.rs  lib.rs
apps/krate-notes/: Cargo.toml  manifest.toml
apps/krate-notes/src/: bindings.rs  lib.rs
apps/layer36-cat/src/: lib.rs
apps/layer36-curl/: manifest.toml
apps/layer36-curl/src/: lib.rs
apps/layer36-hello-gui/: Cargo.toml  manifest.toml
apps/layer36-hello-gui/src/: bindings.rs  lib.rs
crates/adapter-common/: Cargo.toml
crates/adapter-common/src/: drawtext.rs  lib.rs  locale.rs  net.rs  painter.rs  path.rs  time.rs  ui.rs  vector_text.rs
crates/adapter-linux/: Cargo.toml
crates/adapter-linux/src/: lib.rs  winit_native.rs
crates/adapter-macos/: Cargo.toml
crates/adapter-macos/src/: appkit.rs  consent.rs  lib.rs  open_document.rs
crates/adapter-windows/: Cargo.toml
crates/adapter-windows/src/: lib.rs  winit_native.rs
crates/bindings-rust/: Cargo.toml  README.md
crates/bindings-rust/src/: bindings.rs  lib.rs
crates/bundle/: Cargo.toml
crates/bundle/src/: lib.rs
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: main.rs
crates/cli/tests/: cli.rs
crates/layout/: Cargo.toml
crates/layout/benches/: layout.rs
crates/layout/src/: lib.rs
crates/manifest/: Cargo.toml
crates/manifest/src/: lib.rs
crates/policy/: Cargo.toml
crates/policy/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/benches/: startup.rs  uapi_dispatch.rs
crates/runtime/examples/: phase3_appkit_runtime_smoke.rs
crates/runtime/src/: embed.rs  lib.rs  phase2_bindings.rs  phase2_bridge.rs  phase2_host.rs  phase3_gui_bindings.rs  phase3_gui_host.rs  phase3_ui.rs  uapi.rs  uapi_dispatch.rs
crates/runtime/tests/: phase2_wit.rs  phase3_wit.rs
crates/tools/: Cargo.toml
docs/adr/: 0001-rust-for-runtime.md  0002-wasmtime-runtime-engine.md  0003-component-model-from-day-one.md  0006-wit-versioning-strategy.md  0007-ucap-soft-enforcement.md  0008-host-async-runtime.md  0009-sandbox-link-semantics.md  0010-locale-timezone-discovery-fallbacks.md  0011-phase2-benchmark-regression-policy.md  0012-adapter-crate-split-per-os.md  0013-widget-lowering-strategy.md  0014-layout-engine-taffy.md  0015-linux-widget-strategy.md  README.md
docs/book/: book.toml  mermaid-render.js
docs/book/src/: SUMMARY.md  architecture.md  build-log.md  concepts.md  glossary.md  introduction.md  progress-for-everyone.md  quickstart.md  roadmap.md  robots.txt  sitemap.xml  try-krate-notes.md  vision.md  wit-style.md
docs/book/src/blog/: 0001-announcing-krate.md  0001-announcing-layer36.md  0002-every-sandbox-is-cloud.md
docs/book/src/contributing/: adrs.md  ci-and-runners.md  first-pr.md  fuzzing.md  index.md  setup.md  wit-style.md
docs/book/src/pages/: krate-explained.html  krate-live-proof.html  krate-scripted-demo-voiceover.txt  krate-scripted-demo.html  layer36-explained.html  layer36-live-proof.html  layer36-scripted-demo.html
docs/book/src/phase1/: benchmarks.md  retro.md  threat-model.md
docs/book/src/phase2/: adapter-boundary.md  adapter-evidence.md  benchmark-baseline.json  benchmark-evidence.md  benchmarks.md  exit-bundle.md  (+22 more)
docs/community/: discord-setup.md  good-first-issues.md
docs/governance/: github-setup.md  phase-1-kickoff-issue.md  phase-2-kickoff-issue.md  phase-3-kickoff-issue.md
docs/landing/: index.html
docs/legal/: trademark-search.md
docs/legal/launch/: twitter-thread.md
docs/rfc/: 0003-widget-protocol.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: logical_path_parse.rs  manifest_parse.rs  policy_match.rs
scripts/: build-krate-cat-component.sh  build-krate-clock-component.sh  build-krate-curl-component.sh  build-krate-hello-gui-component.sh  build-krate-notes-component.sh  build-layer36-hello-gui-component.sh  build-phase2-go-variant-smoke.sh  build-phase2-language-variant-fixtures.sh  build-phase2-smoke-component.sh  check-adapter-boundary.sh  check-benchmark-regression.sh  check-component-imports.sh  check-phase2-closeout-docs.sh  check-phase2-exit-evidence.sh  check-phase2-freeze-decision.sh  check-phase2-rust-walkthrough-rehearsal.sh  check-phase2-walkthrough-evidence.sh  check-phase3-design-docs.sh  check-phase3-layout.sh  check-phase3-uapi.sh  check-uapi-freeze-lock.sh  check-uapi.sh  compare-phase2-adapter-evidence.sh  compare-phase2-benchmark-evidence.sh  compare-phase2-language-variant-evidence.sh  compare-phase2-sample-evidence.sh  compare-phase2-ucap-evidence.sh  demo-hello-gui.sh  generate-uapi-freeze-evidence.sh  generate-uapi-freeze-lock.sh  generate-uapi-reference.sh  install.sh  make-app-icon.py  make-macos-app.sh  package.sh  phase2-exit-readiness.sh  promote-phase2-go-runtime-fixtures.sh  record-phase2-adapter-evidence.sh  record-phase2-benchmark-baseline.sh  record-phase2-benchmark-evidence.sh  (+21 more)
test/integration/hello-world/: Cargo.toml
test/integration/hello-world/src/: bindings.rs  lib.rs
test/integration/language-variants-src/: krate-ts-cat.mjs  krate-ts-clock.mjs  krate-ts-curl.mjs  layer36-ts-cat.mjs  layer36-ts-curl.mjs
test/integration/phase2-smoke/: Cargo.toml
test/integration/print-loop/: Cargo.toml
wit/krate/: phase1.wit
wit/krate/phase2/: world.wit
wit/krate/phase3/: world.wit
wit/layer36/phase2/: world.wit
(+25 files in other folders)
