[package]
name = "layer36-hello-gui"
version = "0.1.0-dev"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/incyashraj/layer6x6"
rust-version = "1.91"

[dependencies]
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "layer36:hello-gui"

[package.metadata.component.target]
path = "../../wit/layer36/phase3"
world = "gui"

[package.metadata.component.target.dependencies]
"layer36:io" = { path = "../../wit/layer36/phase3/deps/io" }
"layer36:fs" = { path = "../../wit/layer36/phase3/deps/fs" }
"layer36:net" = { path = "../../wit/layer36/phase3/deps/net" }
"layer36:time" = { path = "../../wit/layer36/phase3/deps/time" }
"layer36:locale" = { path = "../../wit/layer36/phase3/deps/locale" }
"layer36:ui" = { path = "../../wit/layer36/phase3/deps/ui" }
"layer36:gfx" = { path = "../../wit/layer36/phase3/deps/gfx" }
"layer36:audio" = { path = "../../wit/layer36/phase3/deps/audio" }

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = "s"
