[package]
name = "krate-adapter-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
thiserror.workspace = true
# Vector text rendering for the drawn-widget painter (ADR-0015 renderer
# slice). Optional so the macOS adapter, which lowers to native AppKit
# controls, does not pay for the font stack.
parley = { version = "0.11.0", optional = true }
vello_cpu = { version = "0.0.9", features = ["text"], optional = true }

[features]
vector-text = ["dep:parley", "dep:vello_cpu"]
