[package]
name = "layer36-adapter-linux"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
layer36-adapter-common = { path = "../adapter-common", version = "0.1.0-dev" }
libc.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
# X11-only for the first native window slice: the x11 backend is pure
# Rust/dlopen and compiles without system packages, while the wayland
# feature's wayland-sys needs libwayland-dev at build time. Wayland desktops
# still get windows through XWayland; native Wayland is a later, deliberate
# step (system deps in CI or a pure-Rust client).
winit = { version = "0.30", default-features = false, features = ["x11", "rwh_06"] }
# CPU framebuffer presentation for the first drawn-widget pass. The
# renderer behind the draw pass moves to vello/wgpu later (plan section 7.5);
# softbuffer keeps the pipeline proof dependency-light.
softbuffer = { version = "0.4", default-features = false, features = ["x11-dlopen"] }
