[package]
name = "krate-adapter-windows"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
krate-adapter-common = { path = "../adapter-common", version = "0.1.0-dev" }

[target.'cfg(target_os = "windows")'.dependencies]
winit = { version = "0.30", default-features = false, features = ["rwh_06"] }
# CPU framebuffer for the first drawn-widget pass; the Windows backend needs
# no feature flags. Vello/wgpu replaces the presenter later (plan 7.5).
softbuffer = { version = "0.4", default-features = false }
