[package]
name = "krate"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Rust guest SDK for Krate UAPI components."
readme = "README.md"
homepage = "https://incyashraj.github.io/krate/"
documentation = "https://docs.rs/krate"
keywords = ["krate", "wasm", "component", "uapi", "sdk"]
categories = ["api-bindings", "wasm"]
include = [
    "Cargo.toml",
    "README.md",
    "src/**/*.rs",
]

[dependencies]
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }
