[package]
name = "krate-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false
build = "build.rs"

[[bin]]
name = "krate"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
krate-manifest = { path = "../manifest", version = "0.1.0-dev" }
krate-policy = { path = "../policy", version = "0.1.0-dev" }
krate-bundle = { path = "../bundle", version = "0.1.0-dev" }
krate-runtime = { path = "../runtime", version = "0.1.0-dev" }
serde.workspace = true
serde_json.workspace = true
tracing-subscriber.workspace = true

# The native consent window is macOS-only today (P3-OPEN-01). Gated by target
# so the AppKit crate never enters Linux or Windows CLI builds; those platforms
# fall back to the terminal consent prompt.
[target.'cfg(target_os = "macos")'.dependencies]
krate-adapter-macos = { path = "../adapter-macos", version = "0.1.0-dev" }

[dev-dependencies]
sha2 = "0.10.9"
tempfile = "3.27.0"
