[package]
name = "krate-layout"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
krate-adapter-common = { path = "../adapter-common", version = "0.1.0-dev" }
taffy.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "layout"
harness = false
