[package]
name = "krate-policy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
krate-adapter-common = { path = "../adapter-common", version = "0.1.0-dev" }
krate-manifest = { path = "../manifest", version = "0.1.0-dev" }
thiserror.workspace = true
