[package]
name = "krate-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[features]
default = ["phase2-bindings"]
phase2-bindings = []

[dependencies]
krate-adapter-common = { path = "../adapter-common", version = "0.1.0-dev" }
krate-layout = { path = "../layout", version = "0.1.0-dev" }
krate-manifest = { path = "../manifest", version = "0.1.0-dev" }
krate-policy = { path = "../policy", version = "0.1.0-dev" }
libc.workspace = true
thiserror.workspace = true
tracing.workspace = true
wasmtime.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
krate-adapter-linux = { path = "../adapter-linux", version = "0.1.0-dev" }

[target.'cfg(target_os = "macos")'.dependencies]
krate-adapter-macos = { path = "../adapter-macos", version = "0.1.0-dev" }

[target.'cfg(target_os = "windows")'.dependencies]
krate-adapter-windows = { path = "../adapter-windows", version = "0.1.0-dev" }

[dev-dependencies]
tempfile = "3.27.0"
criterion.workspace = true
wit-parser.workspace = true

[[bench]]
name = "startup"
harness = false

[[bench]]
name = "uapi_dispatch"
harness = false
