[package]
name = "krate-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
krate-bundle = { path = "../bundle", version = "0.1.0-dev" }
krate-manifest = { path = "../manifest", version = "0.1.0-dev" }
krate-policy = { path = "../policy", version = "0.1.0-dev" }
krate-runtime = { path = "../runtime", version = "0.1.0-dev" }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10.9"
wasmparser.workspace = true
wit-parser.workspace = true
tempfile = { workspace = true }
