[package]
name = "hello-world"
version = "0.1.0-dev"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/incyashraj/krate"
rust-version = "1.91"

[dependencies]
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "krate:hello-world"

[package.metadata.component.target]
path = "../../../wit/krate/phase1.wit"
world = "app"
